<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:background="@color/secondary_color_blue">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RelativeLayout
                android:id="@+id/rlHotel"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:layout_width="@dimen/card_item_img_width"
                    android:layout_height="@dimen/card_item_img_height"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:layout_centerVertical="true"
                    android:id="@+id/material_com_card_view_image"
                    android:background="@android:color/white"/>
            <RelativeLayout
                    android:id="@+id/llCardViewTexts"
                    android:layout_toRightOf="@id/material_com_card_view_image"
                    android:layout_toEndOf="@id/material_com_card_view_image"
                    android:layout_centerInParent="true"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvTitle"
                        android:paddingTop="@dimen/card_title_text_padding"
                        android:paddingLeft="@dimen/card_title_text_padding"
                        android:paddingRight="@dimen/card_title_text_padding"
                        android:paddingBottom="@dimen/card_title_text_padding_bottom"
                        android:textSize="@dimen/title_size"
                        android:textColor="@color/black_button"/>
                <RatingBar
                        android:id="@+id/rbCategory"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@id/tvTitle"
                        android:paddingLeft="@dimen/card_title_text_padding"
                        android:paddingStart="@dimen/card_title_text_padding"
                        android:paddingRight="@dimen/card_title_text_padding"
                        android:paddingEnd="@dimen/card_title_text_padding"
                        android:numStars="5"
                        android:stepSize="1"
                        android:rating="5"
                        android:isIndicator="true"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/description_color"
                        android:textSize="@dimen/description_size"
                        android:text="@string/lorem_ipsum_short"
                        android:id="@+id/tvSubtitle"
                        android:paddingLeft="@dimen/card_title_text_padding"
                        android:paddingBottom="@dimen/big_padding"
                        android:paddingRight="@dimen/big_padding"
                        android:layout_below="@id/rbCategory"
                        android:singleLine="true"/>
            </RelativeLayout>
        </RelativeLayout>
        <View
                android:id="@+id/vDividerHotel"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/rlHotel"
                android:background="@color/cubanacan_dark_blue"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
        <!-- text views in -->
        <TextView
                android:id="@+id/tvLabelIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_in"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_margin="10dp"
                android:layout_below="@id/vDividerHotel"/>
        <TextView
                android:id="@+id/tvIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_date"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_margin="10dp"
                android:layout_below="@id/vDividerHotel"
                android:layout_toRightOf="@id/tvLabelIn"
                android:layout_toEndOf="@id/tvLabelIn"/>

        <!-- text views out -->
        <TextView
                android:id="@+id/tvLabelOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_out"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_margin="10dp"
                android:layout_below="@id/tvLabelIn"/>
        <TextView
                android:id="@+id/tvOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_date"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_margin="10dp"
                android:layout_below="@id/tvLabelIn"
                android:layout_toRightOf="@id/tvLabelIn"
                android:layout_toEndOf="@id/tvLabelIn"/>
        <View
                android:id="@+id/vDividerInOut"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/tvLabelOut"
                android:background="@color/cubanacan_dark_blue"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

        <!-- importe -->
        <TextView
                android:id="@+id/tvLabelImporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_importe"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_margin="10dp"
                android:layout_below="@id/vDividerInOut"/>
        <TextView
                android:id="@+id/tvImporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_money"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_margin="10dp"
                android:layout_below="@id/vDividerInOut"
                android:layout_toRightOf="@id/tvLabelIn"
                android:layout_toEndOf="@id/tvLabelIn"/>

        <View
                android:id="@+id/vDividerImporte"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/tvLabelImporte"
                android:background="@color/cubanacan_dark_blue"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

        <!-- rooms -->
        <android.support.v7.widget.CardView
                android:id="@+id/cvRoom"
                android:layout_below="@id/vDividerImporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
            <!-- rooms -->
            <RelativeLayout
                    android:id="@+id/llHabitaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">
                <TextView
                        android:id="@+id/tvTitular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:text="@string/titular_title"
                        android:textColor="@android:color/black"/>
                <!-- nombre & apellidos -->
                <EditText
                        android:id="@+id/etNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvTitular"
                        android:hint="@string/nombre_hint"
                        android:textColorHint="@color/hint_text"
                        android:textColor="@android:color/black"/>
                <EditText
                        android:id="@+id/etApellidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etNombre"
                        android:hint="@string/apellidos_hint"
                        android:textColorHint="@color/hint_text"
                        android:textColor="@android:color/black"/>
                <EditText
                        android:id="@+id/etCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etApellidos"
                        android:hint="@string/correo_hint"
                        android:textColorHint="@color/hint_text"
                        android:textColor="@android:color/black"/>
                <!-- pais -->
                <TextView
                        android:id="@+id/tvPaisTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/pais"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:layout_below="@id/etCorreo"/>
                <Spinner
                        android:id="@+id/spinPais"
                        android:layout_below="@id/tvPaisTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_centerHorizontal="true"
                        android:ems="10"/>
                <TextView
                        android:id="@+id/tvAceptoTermTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/acepto_terms"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:layout_below="@id/spinPais"/>
                <CheckBox
                        android:id="@+id/cbAcepto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/tvAceptoTermTitle"
                        android:layout_alignBottom="@+id/tvAceptoTermTitle"
                        android:layout_toRightOf="@+id/tvAceptoTermTitle"
                        android:layout_toEndOf="@+id/tvAceptoTermTitle"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnPagar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pagar"
                android:textColor="@android:color/white"
                android:background="@drawable/background_button"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/cvRoom"
                android:gravity="center"/>
    </RelativeLayout>
</ScrollView>