<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:fab="http://schemas.android.com/apk/res/com.resline.cubanacan"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:fillViewport="true">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:background="@android:color/white">
            <ImageView
                    android:id="@+id/ivHotel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_detail_height"
                    android:scaleType="centerCrop"
                    android:src="@drawable/example"/>
            <View
                    android:id="@+id/vOpacity"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_detail_height"
                    android:background="@color/mdtp_transparent_black"/>
            <ImageView
                    android:id="@+id/ivGallery"
                    android:layout_height="@dimen/img_gallery_shortcut"
                    android:layout_width="@dimen/img_gallery_shortcut"
                    android:src="@drawable/gallery"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignBottom="@+id/ivHotel"/>
            <TextView
                    android:id="@+id/tvNombreHotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_hotel_nombre"
                    android:textSize="42sp"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:layout_alignBottom="@+id/ivHotel"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>
            <RelativeLayout
                    android:id="@+id/rlDireccion"
                    android:layout_below="@id/ivHotel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/ivOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        fab:fab_colorNormal="@color/cubanacan_dark_red"
                        fab:fab_colorPressed="@color/cubanacan_light_red"
                        android:src="@drawable/ic_place_black"/>
                <TextView
                        android:id="@+id/tvDireccion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/direccion_lorem"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/ivOne"
                        android:layout_toEndOf="@+id/ivOne"/>
            </RelativeLayout>
            <TextView
                    android:id="@+id/tvDesc"
                    android:layout_below="@id/rlDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum_short"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:textColor="@android:color/black"
                    android:layout_margin="10dp"
                    android:padding="10dp"/>
            <RelativeLayout
                    android:id="@+id/rlDistAeropuerto"
                    android:layout_below="@id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:id="@+id/ivAirplane"
                        android:padding="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/airplane"/>
                <TextView
                        android:id="@+id/tvDistanciaLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dist_airport_label"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/ivAirplane"
                        android:layout_toEndOf="@+id/ivAirplane"/>
                <TextView
                        android:id="@+id/tvDistancia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dist_airport"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tvDistanciaLabel"
                        android:layout_toEndOf="@+id/tvDistanciaLabel"/>
            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/rlDate"
                    android:layout_below="@id/rlDistAeropuerto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:id="@+id/ivDate"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_event_black"/>
                <TextView
                        android:id="@+id/tvEntradaLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_in"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_toRightOf="@+id/ivDate"
                        android:layout_toEndOf="@+id/ivDate"/>
                <TextView
                        android:id="@+id/tvEntrada"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem_date"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_toRightOf="@+id/tvEntradaLabel"
                        android:layout_toEndOf="@+id/tvEntradaLabel"/>
                <TextView
                        android:id="@+id/tvSalidaLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_out"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_below="@+id/tvEntrada"
                        android:layout_toRightOf="@+id/ivDate"
                        android:layout_toEndOf="@+id/ivDate"/>
                <TextView
                        android:id="@+id/tvSalida"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem_date"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_below="@+id/tvEntrada"
                        android:layout_toRightOf="@+id/tvEntradaLabel"
                        android:layout_toEndOf="@+id/tvEntradaLabel"/>
            </RelativeLayout>
            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnServiciosActividades"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/services_activities"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/rlDate"
                    android:gravity="center"/>
            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnMotivos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/motives"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/btnServiciosActividades"
                    android:gravity="center"/>
            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnElegirHab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_room"
                    android:textColor="@android:color/white"
                    android:background="@drawable/background_button"
                    android:layout_margin="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/btnMotivos"
                    android:gravity="center"/>
        </RelativeLayout>
    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
    <View android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          android:background="@drawable/gradient_header_background"
          android:minHeight="?attr/actionBarSize"/>
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cubanacan_light_blue"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar">
        <TextView
                android:id="@+id/tvToolBar"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
    </android.support.v7.widget.Toolbar>
</merge>
